back-up/ocm-hub/admissionregistration.k8s.io/v1/mutatingwebhookconfigurations/managedclustermutators.admission.cluster.open-cluster-management.io.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: "2023-08-11T08:20:25Z"
  generation: 1
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:webhooks:
        .: {}
        k:{"name":"managedclustermutators.admission.cluster.open-cluster-management.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:caBundle: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:reinvocationPolicy: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
    manager: registration-operator
    operation: Update
    time: "2023-08-11T08:20:25Z"
  name: managedclustermutators.admission.cluster.open-cluster-management.io
  resourceVersion: "2443"
  uid: e509f553-1fb9-48c0-9d1f-aba33d6f4665
webhooks:
- admissionReviewVersions:
  - v1beta1
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURQekNDQWllZ0F3SUJBZ0lJQUp5VlRXNmNwbEl3RFFZSktvWklodmNOQVFFTEJRQXdMVEVyTUNrR0ExVUUKQXd3aVkyeDFjM1JsY2kxdFlXNWhaMlZ5TFhkbFltaHZiMnRBTVRZNU1UYzBNVGs0TWpBZUZ3MHlNekE0TVRFdwpPREU1TkRGYUZ3MHlOREE0TVRBd09ERTVOREphTUMweEt6QXBCZ05WQkFNTUltTnNkWE4wWlhJdGJXRnVZV2RsCmNpMTNaV0pvYjI5clFERTJPVEUzTkRFNU9ESXdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUsKQW9JQkFRQzJZdkZzcGw3N2tqNnUzV2FBV3V2RWJ0azUvNFVKQ3h6SUU3Nm1CZXRLQUZTbXBqbkRRdGR0N3Z4Zgo1TWhhK1BCd0NnSS [...]
    service:
      name: cluster-manager-registration-webhook
      namespace: open-cluster-management-hub
      path: /mutate-cluster-open-cluster-management-io-v1-managedcluster
      port: 9443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: managedclustermutators.admission.cluster.open-cluster-management.io
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - cluster.open-cluster-management.io
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - managedclusters
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
